# nursing-robotic-dog

./: README.md  main_demo.cpp
AstraSDK-v2.1.1-24f74b8b15-20200426T012326Z-Linux-aarch64/: README.txt
AstraSDK-v2.1.1-24f74b8b15-20200426T012326Z-Linux-aarch64/samples/: CMakeLists.txt  readme.txt
AstraSDK-v2.1.1-24f74b8b15-20200426T012326Z-Linux-aarch64/samples/c-api/: CMakeLists.txt
AstraSDK-v2.1.1-24f74b8b15-20200426T012326Z-Linux-aarch64/samples/c-api/BodyReaderPoll/: CMakeLists.txt  main.c
AstraSDK-v2.1.1-24f74b8b15-20200426T012326Z-Linux-aarch64/samples/c-api/ColorReaderEvent/: CMakeLists.txt  main.c
AstraSDK-v2.1.1-24f74b8b15-20200426T012326Z-Linux-aarch64/samples/c-api/ColorReaderPoll/: CMakeLists.txt  main.c
AstraSDK-v2.1.1-24f74b8b15-20200426T012326Z-Linux-aarch64/samples/c-api/DepthReaderEvent/: CMakeLists.txt  main.c
AstraSDK-v2.1.1-24f74b8b15-20200426T012326Z-Linux-aarch64/samples/c-api/DepthReaderPoll/: CMakeLists.txt  main.c
AstraSDK-v2.1.1-24f74b8b15-20200426T012326Z-Linux-aarch64/samples/c-api/HandReader/: CMakeLists.txt  main.c
AstraSDK-v2.1.1-24f74b8b15-20200426T012326Z-Linux-aarch64/samples/c-api/InfraredColorReaderEvent/: CMakeLists.txt  main.c
AstraSDK-v2.1.1-24f74b8b15-20200426T012326Z-Linux-aarch64/samples/c-api/InfraredReaderEvent/: CMakeLists.txt  main.c
AstraSDK-v2.1.1-24f74b8b15-20200426T012326Z-Linux-aarch64/samples/c-api/InfraredReaderPoll/: CMakeLists.txt  main.c
AstraSDK-v2.1.1-24f74b8b15-20200426T012326Z-Linux-aarch64/samples/cmake/: ConfigUserFile.cmake  CopyIfNotExist.cmake  FindAstra.cmake  FindCLISP.cmake  FindDoxygen.cmake  FindProtobuf.cmake  InstallPDB.cmake
AstraSDK-v2.1.1-24f74b8b15-20200426T012326Z-Linux-aarch64/samples/cmake/templates/: perconfig.vcxproj.user.in  vcxproj.user.in
AstraSDK-v2.1.1-24f74b8b15-20200426T012326Z-Linux-aarch64/samples/cmake/toolchains/: aarch64-linux.toolchain.cmake  android.toolchain.cmake  android.toolchain.r10.cmake  arm-linux.toolchain.cmake
AstraSDK-v2.1.1-24f74b8b15-20200426T012326Z-Linux-aarch64/samples/cpp-api/: CMakeLists.txt
AstraSDK-v2.1.1-24f74b8b15-20200426T012326Z-Linux-aarch64/samples/cpp-api/ColorReaderEventCPP/: CMakeLists.txt  main.cpp
AstraSDK-v2.1.1-24f74b8b15-20200426T012326Z-Linux-aarch64/samples/cpp-api/DepthReaderEventCPP/: CMakeLists.txt  main.cpp
AstraSDK-v2.1.1-24f74b8b15-20200426T012326Z-Linux-aarch64/samples/plugins/: CMakeLists.txt
AstraSDK-v2.1.1-24f74b8b15-20200426T012326Z-Linux-aarch64/samples/sfml/: CMakeLists.txt
AstraSDK-v2.1.1-24f74b8b15-20200426T012326Z-Linux-aarch64/samples/sfml/ColorizedBodyViewer-SFML/: CMakeLists.txt  main.cpp
AstraSDK-v2.1.1-24f74b8b15-20200426T012326Z-Linux-aarch64/samples/sfml/MaskedColorViewer-SFML/: CMakeLists.txt  main.cpp
AstraSDK-v2.1.1-24f74b8b15-20200426T012326Z-Linux-aarch64/samples/sfml/MultiSensorViewer-SFML/: CMakeLists.txt  main.cpp
AstraSDK-v2.1.1-24f74b8b15-20200426T012326Z-Linux-aarch64/samples/sfml/RotatedBodyViewer-SFML/: CMakeLists.txt  main.cpp
AstraSDK-v2.1.1-24f74b8b15-20200426T012326Z-Linux-aarch64/samples/sfml/SimpleBodyViewer-SFML/: CMakeLists.txt  main.cpp
AstraSDK-v2.1.1-24f74b8b15-20200426T012326Z-Linux-aarch64/samples/sfml/SimpleColorViewer-SFML/: CMakeLists.txt  main.cpp
AstraSDK-v2.1.1-24f74b8b15-20200426T012326Z-Linux-aarch64/samples/sfml/SimpleDepthViewer-SFML/: CMakeLists.txt  main.cpp
AstraSDK-v2.1.1-24f74b8b15-20200426T012326Z-Linux-aarch64/samples/sfml/SimpleHandViewer-SFML/: CMakeLists.txt  main.cpp
AstraSDK-v2.1.1-24f74b8b15-20200426T012326Z-Linux-aarch64/samples/sfml/SimpleStreamViewer-SFML/: CMakeLists.txt  main.cpp
AstraSDK-v2.1.1-24f74b8b15-20200426T012326Z-Linux-aarch64/samples/sfml/StandaloneBodyViewer-SFML/: CMakeLists.txt  main.cpp
AstraSDK-v2.1.1-24f74b8b15-20200426T012326Z-Linux-aarch64/samples/tools/: CMakeLists.txt
AstraSDK-v2.1.1-24f74b8b15-20200426T012326Z-Linux-aarch64/samples/tools/DebugHandViewer/: CMakeLists.txt  main.cpp
